--- a/kosh/src/kosh_backend/Cargo.toml
+++ b/kosh/src/kosh_backend/Cargo.toml
@@ -12,3 +12,13 @@ crate-type = ["cdylib"]
 candid = "0.10"
 ic-cdk = "0.17"
 ic-cdk-timers = "0.11" # Feel free to remove this dependency if you don't need timers
+serde = { version = "1.0", features = ["derive"] }
+base32 = "0.4"
+crc16 = "0.4"
+stellar-xdr = { version = "22.0.0", features = ["curr"] }
+base64 = "0.22"
+sha2 = "0.10"
+hex = "0.4"
+serde_json = "1.0"
+url = "2.4"
+getrandom = { version = "0.2", features = ["js"] }
