fixed minor api key error

--- a/kosh/src/kosh_frontend/manifest.json
+++ b/kosh/src/kosh_frontend/manifest.json
@@ -14,7 +14,8 @@
       "storage",
       "tabs",
       "notifications",
-      "contextMenus"
+      "contextMenus",
+      "activeTab"
     ],
     "host_permissions": [
       "https://*.stellar.org/*",
