--- a/stellar-wallet-frontend/package.json
+++ b/stellar-wallet-frontend/package.json
@@ -10,18 +10,25 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
     "@dfinity/agent": "^1.0.1",
     "@dfinity/auth-client": "^1.0.1",
     "@dfinity/candid": "^1.0.1",
     "@dfinity/identity": "^1.0.1",
     "@dfinity/principal": "^1.0.1",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-toast": "^1.2.15",
     "@tanstack/react-query": "^5.8.4",
-    "lucide-react": "^0.294.0",
-    "class-variance-authority": "^0.7.0",
+    "@types/qrcode": "^1.5.5",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
+    "lucide-react": "^0.294.0",
+    "qrcode": "^1.5.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7"
   },
